--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ body {
 }
 #byafpar .theme {
   width: 800px;
-  background-color: rgb(161, 224, 203);
+  background-color: pink;
   border-radius: 10px;
   margin: 30px;
   padding: 30px;
